[FT] Notes item: Now the example notes components are displayed

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,13 @@
 <ion-content class="ion-padding">
     <h1>Notes app</h1>
+    <ion-tabs>
+        <ion-tab-bar slot="bottom" id="tabs-container">
+            <ion-tab-button tab="dashboard">
+                <ion-icon name="easel-outline"></ion-icon>
+            </ion-tab-button>
+            <ion-tab-button tab="notes">
+                <ion-icon name="folder-open-outline"></ion-icon>
+            </ion-tab-button>
+        </ion-tab-bar>
+    </ion-tabs>
 </ion-content>
