--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,9 @@
 #tabs-container {
     margin-bottom: 20px; 
-    margin-inline: 20px; 
-    border-radius: 15px;}
+    margin-inline: 20px;
+    margin-top: 15px; 
+    border-radius: 15px;
+}
 
 ion-icon {
     font-size: 1.5rem;
