--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>edit</ion-title>
+    <ion-title>edit page</ion-title>
   </ion-toolbar>
 </ion-header>
 
