--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-content class="ion-padding">
+<ion-content>
     <ion-tabs>
         <ion-tab-bar slot="bottom" id="tabs-container">
             <ion-tab-button tab="dashboard">
