--- a/src/app/home/notes/notes.page.scss
+++ b/src/app/home/notes/notes.page.scss
@@ -1,3 +1,70 @@
+* {
+    padding: 0px; 
+    margin: 0px; 
+}
+
+ion-header {
+    all: unset;
+    display: flex;
+    flex-direction: column; 
+    justify-content: flex-start;
+}
+
 ion-list {
-    border-radius: 15px;
+    gap: 10px; 
+    padding-inline: 20px;
+    padding-top: 30px; 
+}
+
+h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+    padding-inline: 20px; 
+}
+
+#searcher {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-inline: 20px; 
+    background-color: #333333;
+    padding: 10px; 
+    border-radius: 10px;
+    box-shadow: 0px 20px 20px #fff;
+    z-index: 999; 
+}
+
+input {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    color: #fff;
+    width: calc(100% - 100px);
+}
+
+#create-button {
+    width: 100px;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    color: #afafaf; 
+    font-size: 1.1rem;
+}
+
+button {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    font-weight: 500;
+    color: #afafaf; 
+    font-size: 1.1rem;
+    margin-left: 5px; ;
+}
+
+#create-button:hover {
+    cursor: pointer;
 }
