--- a/src/app/edit/edit-details/edit-details.page.scss
+++ b/src/app/edit/edit-details/edit-details.page.scss
@@ -1,3 +1,10 @@
+ion-header {
+    all: unset;
+    display: flex;
+    flex-direction: column; 
+    justify-content: flex-start;
+    background-color: #fff;
+}
 
 #title {
     font-size: 1.5rem;
@@ -46,3 +53,4 @@ button {
     border-radius: 10px;
     margin-bottom: 20px;
 }
+
