--- a/src/app/home/notes/notes.page.html
+++ b/src/app/home/notes/notes.page.html
@@ -10,7 +10,7 @@
         />
         <div id="create-button">
             <ion-icon name="add-circle"></ion-icon>
-            <button>create</button>
+            <button (click)="create()">create</button>
         </div>
     </div>
 </ion-header>
