--- a/src/app/edit/edit-details/edit-details.page.html
+++ b/src/app/edit/edit-details/edit-details.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-buttons>   
-    <ion-back-button></ion-back-button>
+    <ion-back-button defaultHref="/app/notes"></ion-back-button>
   </ion-buttons>
 </ion-header>
 
