--- a/src/app/home/notes/note-card/note-card.component.scss
+++ b/src/app/home/notes/note-card/note-card.component.scss
@@ -28,9 +28,9 @@ h1 {
     margin-bottom: 10px;
 }
 
-p {
+#author-card {
     font-size: 1.2rem;
-    font-weight: r00;
+    font-weight: 400;
     margin-bottom: 10px;
     color: #898989; 
 }
@@ -47,7 +47,7 @@ p {
 .bottom-row-item {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     color: #3842ff; 
     gap: 10px; 
