--- a/src/app/home/notes/notes.page.html
+++ b/src/app/home/notes/notes.page.html
@@ -1,6 +1,7 @@
 <ion-header>
-    <ion-buttons>   
-        <ion-menu-button autoHide="false"></ion-menu-button>
+    <ion-buttons>
+        <ion-menu-button color="primary" autoHide="false" menu="m1">
+        </ion-menu-button>
     </ion-buttons>
     <h1>Notes</h1>
     <div id="searcher">
