--- a/src/app/home/notes/notes.page.scss
+++ b/src/app/home/notes/notes.page.scss
@@ -10,6 +10,10 @@ ion-header {
     justify-content: flex-start;
 }
 
+ion-menu-button {
+    margin: 20px; 
+}
+
 ion-list {
     gap: 10px; 
     padding-inline: 20px;
