--- a/src/app/home/dashboard/dashboard.page.html
+++ b/src/app/home/dashboard/dashboard.page.html
@@ -1,7 +1,8 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>dashboard</ion-title>
-  </ion-toolbar>
+    <ion-buttons>
+        <ion-menu-button color="primary" autoHide="false" menu="m1">
+        </ion-menu-button>
+    </ion-buttons>
 </ion-header>
 
 <ion-content>
