--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,3 +1,5 @@
 <ion-content class="ion-text-center">
-    <ion-button (click)="onLogin()">Login</ion-button>
+    <div>
+        <ion-button (click)="onLogin()">Login</ion-button>
+    </div>
 </ion-content>
