--- a/src/app/home/dashboard/dashboard.page.html
+++ b/src/app/home/dashboard/dashboard.page.html
@@ -4,7 +4,26 @@
         </ion-menu-button>
     </ion-buttons>
 </ion-header>
-
 <ion-content>
+    <div id="wrapper">
+        <h1>Dashboard</h1>
+        <div class="row">
+            <div id="circle">
+                <span class="count">{{notes.length}}</span>
+            </div>
+            <p>Notes availables to read</p>
+        </div>
+        <div class="row">
+            <div id="circle">
+                <span class="count">{{authors.length}}</span>
+            </div>
+            <p>Passionate writers</p>
+        </div>
 
+        <h1 id="latest">Latest note</h1>
+        <div id="card-container" (click)="goLatest()">
+            <p id="dashboard-title">{{note.title}}</p>
+            <p id="dashboard-author">{{note.author}}</p>
+        </div>
+    </div>
 </ion-content>
